<resources>
    <string name="app_name">Badger Me</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in with Google</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="activity_food">Activity food</string>
    <string name="activity_walk">Activity walk</string>
    <string name="activity_drink">Activity drink</string>
    <string name="activity_hugs">Activity hugs</string>
    <string name="activity_chat">Activity chat</string>
    <string name="app_title">Badger Me</string>
    <string name="avatar_badger">Avatar badger</string>
    <string name="highlight">Highlight</string>
    <string name="interests_header">What are you interested in?</string>
    <string name="eat_interest_icon">Eat interest icon</string>
    <string name="interest_icon_hugs">Interest icon hugs</string>
    <string name="interest_icon_walks">Interest icon walks</string>
    <string name="interest_icon_chat">Interest icon chat</string>
    <string name="interest_icon_coffee">Interest icon coffee</string>
    <string name="interest_icon_drink">Interest icon drink</string>
    <string name="hugs">hugs</string>
    <string name="drinks">drinks</string>
    <string name="coffees">coffees</string>
    <string name="chats">chats</string>
    <string name="walks">walks</string>
    <string name="eat">eat</string>
    <string name="eat_tickbox">eat tickbox</string>
    <string name="drink_tickbox">drink tickbox</string>
    <string name="coffee_tickbox">coffee tickbox</string>
    <string name="chats_tickbox">chats tickbox</string>
    <string name="walks_tickbox">walks tickbox</string>
    <string name="hugs_tickbox">hugs tickbox</string>
    <string name="interest">interest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">Continue</string>
</resources>